assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');

body {
    font-family: 'Playfair Display', serif;
}

header {
    margin: 0;
}

.logo {

    height: 50px;
    width: auto;
    margin: 0 32px;
}



.padding-space {
    margin-top: 80px;
}

/* ----------------------------------------- Navbar */
.navbar {
    background-color: white;
}

.navbar .navbar-toggler {
    border: none;
}

.navbar .navbar-nav a {
    font-weight: bold;
}


/* ----------------------------------------- Colors */



/* ----------------------------------------- special paddings/margins/text */

h1,
h2,
h3,
h4 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}

/* ----------------------------------------- Hero */

.hero-container {
    background: url("../images/hero.webp") no-repeat top center fixed;
    height: 100vh;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;

}

.hero-title {
    color: white;
    font-weight: bold;
    margin-bottom: 30px;
    max-width: 900px;
    ;
}

.lead {
    color: #141411;
    padding: 5px;
    background-color: white;
}

/* ----------------------------------------- Cake of the Month */
.cake-month-container {}

.cake-month-image {
    width: 100%;
}

.cake-month-text {
    align-items: center;
}

/* ----------------------------------------- Recipes */
.cake-recipes-container {}


/* ----------------------------------------- Callout */

.cta-container {
    background: url("../images/CTA.webp") no-repeat center center;
    height: 400px;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    display: flex;
    align-items: center;
    justify-content: left;
    position: relative;
}

.cta-title {
    color: white;
    font-weight: bold;
    margin-bottom: 30px;
    max-width: 450px;
}

/* ----------------------------------------- Buttons */
.cta-btn {
    font-weight: bold;
    border-radius: 25px;
    width: 200px;
    background-color: #0047ff;
    color: white;
    border: #0047ff;
}

.cta-btn:hover,
.cta-btn:active,
.cta-btn:focus,
.cta-btn:active:focus {
    background-color: #4e7fff;
    border-color: ##4e7fff;
    color: white;
}

.feature-btn {
    font-weight: bold;
    border-radius: 25px;
    width: auto;
    ;
    background-color: none;
    color: #4e7fff;
    border: none;
    font-size: 16px;
}

